[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Actors/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Actors/Enemies/Crawler.gd" type="Script" id=2]
[ext_resource path="res://Assets/enemy.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Crawler" instance=ExtResource( 1 )]
script = ExtResource( 2 )
TILE_SIZE = 32
WALK_SPEED = 6

[node name="DefaultShape" parent="." index="0"]
shape = SubResource( 1 )

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 2 )

[node name="Stats" parent="." index="2"]
current_hp = 1
max_hp = 1

[node name="FloorDetectorLeft" type="RayCast2D" parent="." index="5"]
position = Vector2( -9, 0 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="FloorDetectorRight" type="RayCast2D" parent="." index="6"]
position = Vector2( 9, 0 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="ProjectileSpawnPoint" type="Position2D" parent="." index="7"]
position = Vector2( -16, 0 )

[node name="Timer" type="Timer" parent="." index="8"]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtboxes/HurtBox"]
[editable path="Hitbox"]
